# Dronethon-2026-Submission

./: .gitignor  .gitignore  README.md  config.py  detect.py  export.py  main.py  requirements.txt
docs/: api.md  architecture.md  setup_guide.md
docs/plantuml/: 01_system_overview.puml  02_threaded_pipeline_sequence.puml  03_yolo_detection_flow.puml  04_object_geolocation_flow.puml  README.md
scripts/: calibrate.py  download_yolo_onnx.py  generate_aruco_markers.py  pc_receive_telemetry.py  pi_send_telemetry.py  setup.py  simulate.py
src/: __init__.py  communication.py  drone_controller.py  navigation.py  sensors.py  video_transmitter.py
src/control/: __init__.py  flight_modes.py  pid_controller.py
src/core/: __init__.py  communication.py
src/localization/: __init__.py  aruco_localizer.py
src/runtime/: README.md  __init__.py  aruco_demo.py  aruco_grid_demo_mavsdk.py  imu_grid_demo_mavsdk.py  localization_demo.py  object_position_demo_mavsdk.py  pipeline.py  yolo_demo.py  yolo_segmentation_demo.py
src/stages/: __init__.py  aruco_detector.py  connect.py  detector.py  yolo_detector.py
src/vision/: README.md  __init__.py  aruco_demo.py  aruco_processor.py  cloud_point_demo.py  demo.py  depth_processor.py  frame_provider.py  object_geolocator.py
src/visualization/: CMakeLists.txt  README.md  package.xml
src/visualization/launch/: bringup.launch
src/visualization/rviz/: drone_viz.rviz
src/visualization/scripts/: mavros_tf_bridge.py
src/visualization/urdf/: drone_model.xacro
tests/: test_drone_controller.py  test_navigation.py  test_object_geolocator.py  test_sensors.py  test_vision.py  test_yolo_detector.py
